2004-03-31  Naba Kumar  <naba@gnome.org>

	* anjuta.glade: Added a note on compiler options dialog ->support
	dialog telling that supports are only available for file mode.

	* src/anjuta.[c,h], src/project_dbase.[h,c], src/main.c,
	src/anjuta_cbs.c:
	Improved shutdown time delay by bypassing project closing
	and unloading plugins.

	* src/build_file.c, data/properties/anjuta.properties: Added a property
	to toggle on/off for going to first error automatically.

2004-03-31  Pavol Bosik <Pavol.Bosik@siemens.com>

	* src/debugger.c: fixed core file loading
	* src/aneditor.cxx, scintilla/include/SString.h: fixed HANGUP bug
	for long lines (bugs #700968 and #911376)
	* scintilla/ScintillaGTK.cxx, scintilla/PlatGTK.cxx: partially fixed bug
	#917982.
	* src/anjuta.c: Focuses current AnEditor correctly.

2004-03-30  Naba Kumar  <naba@gnome.org>

	* THANKS, anjuta.prj: Removed and moved all credits to AUTHORS file.
	* AUTHORS: Updated with all contributors names.
	* NEWS: Updated.
	* src/about.c: Reads contributors names from AUTHORS file.
	* manuals/C/anjuta-manual/authors.xml: Points to online
	contributors list.
	
2004-03-29  Naba Kumar  <naba@gnome.org>

	* data/properties/ada.properties: Fixed syntax colors. Patch
	from Gabriel Rossetti <gabriel.rossetti _at_ eivd.ch>
	(bug #923474).

	* src/source.c, src/gnome_project.c, src/appwizard_cbs.c,
	src/appwiz_page2.c:	Correctly defines PACKAGE_DATA_DIR for
	generated projects, so that their pixmap files are
	found properly (bug #919903).
	
	* configure.in, src/main.c: Defines SYSTEM_DATA_DIR for
	anjuta.

	* src/source.c: Installs .glade file of libgllade
	projects in $(datadir)/$(package)/glade (part of bug #861038).
	
	* src/compiler_options.c: Fixed 'remove' and 'clear' of Defines list
	in compiler options (bug #883837).
	
	* src/launcher.c: Disabled pty terminal echo. Correctly prompts
	for passwords (eg. root install and ssh cvs access). Fixed Bug #894533.
	
2004-03-29  Pavol Bosik <Pavol.Bosik@siemens.com>
