@@ -1,3 +1,7 @@
+2004-04-01  Naba Kumar  <naba@gnome.org>
+
+	* src/search-replace.c: Fixed a crash bug (bug #921893).
+
 2004-03-31  Naba Kumar  <naba@gnome.org>
 
 	* anjuta.glade: Added a note on compiler options dialog ->support
